--- a/WebProje/WebProje/Views/Shared/_AdminLayout.cshtml
+++ b/WebProje/WebProje/Views/Shared/_AdminLayout.cshtml
@@ -274,7 +274,7 @@
 
             <li class="nav-item">
                
-                <a class="nav-link collapsed" href="/Admin/Index/">
+                <a class="nav-link collapsed" href="/Urun/Index/">
                     <i class="bi bi-grid"></i>
                     <span> Admin Özet</span>
                 </a>
