--- a/WebProje/WebProje/Views/Admin/login.cshtml
+++ b/WebProje/WebProje/Views/Admin/login.cshtml
@@ -1,1 +1,54 @@
-﻿
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+
+    <title></title>
+    <!-- Favicons -->
+    <link href="~/AdminLayout/assets/img/favicon.png" rel="icon">
+    <link href="~/AdminLayout/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="~/AdminLayout/https://fonts.gstatic.com" rel="preconnect">
+    <link href="~/AdminLayout/https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="~/AdminLayout/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/AdminLayout/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/AdminLayout/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/AdminLayout/assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="~/AdminLayout/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="~/AdminLayout/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="~/AdminLayout/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="~/AdminLayout/assets/css/style.css" rel="stylesheet">
+</head>
+<body>
+    <div>
+        <form class="login-form" method="post" action="/Admin/Login/">
+            <div class="login-wrap">
+                @if (Session["adminid"] == null)
+                {
+                    <p class="alert">@ViewBag.Uyari</p>
+                }
+
+                <p class="login-img"><i class="icon_lock_alt"></i></p>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="icon_profile"></i></span>
+                    <input type="text" class="form-control" name="Eposta" placeholder="E-Posta" autofocus>
+                </div>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+                    <input type="password" name="Sifre" class="form-control" placeholder="Şifre">
+                </div>
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Giriş Yap</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
