--- a/MvcProje/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProje/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     Layout = null;
 }
 
@@ -32,9 +33,10 @@
                         </a>
                     </li>
                     <li class="nav-item nav-settings d-none d-lg-block">
-                        <a class="nav-link" href="#">
+                        <span class="username"></span>
+                        
                             <i class="mdi mdi-format-line-spacing"></i>
-                        </a>
+                        </>
                     </li>
                 </ul>
                 <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -63,13 +65,19 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/Category/Index/">
+                            <span class="menu-title">Kategoriler</span>
+                            <i class="mdi mdi-format-list-bulleted menu-icon" style="color:#8E44AD"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/Animal/Index/">
                             <span class="menu-title">SİTEYE GİT</span>
                             <i class="mdi mdi-car menu-icon" style="color:#8E44AD"></i>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Login/Index/">
+                        <a class="nav-link" href="/Admin/Logout/">
                             <span class="menu-title">ÇIKIŞ YAP</span>
                             <i class="mdi mdi-logout menu-icon" style="color:#8E44AD"></i>
                         </a>
