--- a/MvcProje/Views/Shared/_HomeLayout.cshtml
+++ b/MvcProje/Views/Shared/_HomeLayout.cshtml
@@ -41,8 +41,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-6 top-forms text-right mt-lg-3 mt-md-1 mt-0">
 					<span class="mx-lg-4 mx-md-2  mx-1" style="color:#8E44AD">
-						<a href="/Login/Index/">
-							<i class="fas fa-lock" style="color:#8E44AD"></i> Giriş Yap
+						<a href="/Admin/Login/">
+							<i class="fas fa-lock" style="color:#8E44AD"></i> Admin Girişi
+						</a>
+					</span><span class="mx-lg-4 mx-md-2  mx-1" style="color:#8E44AD">
+						<a href="/User/Login/">
+							<i class="fas fa-lock" style="color:#8E44AD"></i> Kullanıcı Girişi
 						</a>
 					</span>
 					<span>
