--- a/MvcProje/Views/User/Login.cshtml
+++ b/MvcProje/Views/User/Login.cshtml
@@ -1,17 +1,13 @@
-﻿@model MvcProje.Models.Entity.Admin
+﻿@model MvcProje.Models.Entity.User
 @{
     Layout = null;
 }
-@*if (Session["adminid"] == null)
-    {
-        Response.Redirect("/Admin/Login/");
-    }
-*@
+
 <
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Admin Girişi</title>
+    <title>Kullanıcı Girişi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
@@ -19,16 +15,17 @@
     <link rel="stylesheet" href="/login-form-20/css/style.css">
 </head>
 <body class="img js-fullheight" style="background-image: url(/login-form-20/images/bg.jpg);">
-    <form class="login-form" method="post" action="/Admin/Login/">
+    <form class="login-form" method="post" action="/User/Login/">
         <section class="ftco-section">
-            <p class="alert-danger">@ViewBag.Uyari</p>
-            <div class="login-wrap" action="/Animal/Login/">
+            
+            <div class="login-wrap" action="/User/Login/">
                 <div class="row justify-content-center">
+                    <p class="alert-danger">@ViewBag.Uyari</p>
                     <div class="col-md-6 text-center mb-5">
-                        <h2 class="heading-section">ADMİN GİRİŞİ</h2>
+                        <h2 class="heading-section">Kullanıcı GİRİŞİ</h2>
                     </div>
                 </div>
-                
+
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4">
                         <div class="login-wrap p-0">
@@ -37,7 +34,7 @@
                                     <input type="text" class="form-control" name="Email" placeholder="E Posta" required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control"  type="password" name="Password" placeholder="Şifreniz" required>
+                                    <input class="form-control" type="password" name="Password" placeholder="Şifreniz" required>
                                     <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                                 </div>
                                 <div class="form-group">
@@ -47,7 +44,7 @@
                             <button class="form-control btn btn-secondary submit px-3">
 
                                 <span class="menu-title"><a href="/Home/Index/">SİTEYE GİT </a></span>
-                              
+
                             </button>
                         </div>
                     </div>
@@ -56,7 +53,7 @@
         </section>
 
     </form>
-   
+
     <script src="/login-form-20/js/jquery.min.js"></script>
     <script src="/login-form-20/js/popper.js"></script>
     <script src="/login-form-20/js/bootstrap.min.js"></script>
