--- a/MvcProje/Views/Category/Index.cshtml
+++ b/MvcProje/Views/Category/Index.cshtml
@@ -22,7 +22,7 @@
 					<td>@item.CategoryID</td>
 					<td>@item.CategoryName</td>
 					<td>
-						@Html.ActionLink("Güncelle","Edit",new{id=item.Animals})
+						@Html.ActionLink("Güncelle","Edit",new{id=item.CategoryID})
 					</td>
 				</tr>
 				
